--- a/public/css/app.css
+++ b/public/css/app.css
@@ -872,9 +872,6 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -889,9 +886,6 @@ select {
 }
 .mb-4 {
   margin-bottom: 1rem;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mb-7 {
   margin-bottom: 1.75rem;
@@ -913,6 +907,9 @@ select {
 }
 .ml-4 {
   margin-left: 1rem;
+}
+.ml-8 {
+  margin-left: 2rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -1079,9 +1076,6 @@ select {
 .table-auto {
   table-layout: auto;
 }
-.border-collapse {
-  border-collapse: collapse;
-}
 .border-separate {
   border-collapse: separate;
 }
@@ -1121,11 +1115,6 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
 .list-inside {
   list-style-position: inside;
 }
@@ -1142,12 +1131,6 @@ select {
 }
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1422,6 +1405,12 @@ select {
 }
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+}
+.bg-cover {
+  background-size: cover;
+}
+.bg-center {
+  background-position: center;
 }
 .fill-current {
   fill: currentColor;
@@ -1856,10 +1845,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
-.hover\:bg-green-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
 .hover\:bg-indigo-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
@@ -2134,10 +2119,6 @@ select {
     max-width: 56rem;
   }
 
-  .sm\:max-w-6xl {
-    max-width: 72rem;
-  }
-
   .sm\:max-w-lg {
     max-width: 32rem;
   }
@@ -2176,10 +2157,6 @@ select {
 
   .sm\:p-0 {
     padding: 0px;
-  }
-
-  .sm\:p-10 {
-    padding: 2.5rem;
   }
 
   .sm\:p-4 {
@@ -2238,10 +2215,6 @@ select {
     width: 4rem;
   }
 
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .md\:w-32 {
     width: 8rem;
   }
@@ -2286,10 +2259,6 @@ select {
     width: 5rem;
   }
 
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
   .lg\:w-48 {
     width: 12rem;
   }
@@ -2320,10 +2289,6 @@ select {
 
   .xl\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .xl\:w-4\/5 {
-    width: 80%;
   }
 }
 @media (prefers-color-scheme: dark) {
