--- a/public/css/app.css
+++ b/public/css/app.css
@@ -726,9 +726,9 @@ select {
 .visible {
   visibility: visible;
 }
-/* .collapse {
+.collapse {
   visibility: collapse;
-} */
+}
 .fixed {
   position: fixed;
 }
