--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,7 +93,7 @@ Reset links to optimize for opt-in styling instead of opt-out.
 
 a {
   color: inherit;
-  text-decoration: inherit;
+  text-decoration: inherit !important;
 }
 
 /*
